--- a/index.htm
+++ b/index.htm
@@ -100,6 +100,16 @@
   </div>
 </div>
 
+<div class="container-fluid about a-3">
+    <div class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <h2>Update Aquatic Map Coming Soon!</h2>
+        <p>We are currently laying the groundwork for the launch of our new 1.13.x compatible map. This will be our new permanent home. Stay tuned for more information!</p>
+        <p><a class="btn btn-success btn-md" href="newmap.htm" role="button">More Info</a></p>
+      </div>
+    </div>
+  </div>
+
 <div class="container-fluid footer text-center">
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -107,9 +117,8 @@
                 <li><a href="https://www.facebook.com/mcmidgard" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
                 <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
                 <li><a href="https://www.reddit.com/r/MidgardMC/" target="_blank"><i class="fab fa-reddit-square"></i></a></li>
-                <li><a href="https://discord.gg/E2BN4Cz" target="_blank"><i class="fab fa-discord"></i></a></li>
             </ul>
-            <p>Copyright &copy;<?php echo date("Y"); ?> All Rights Reserved. Logo and Website by <a href="https://adenamarketing.com" target="_blank">Adena Marketing</a></p>
+            <p>Copyright &copy;<?php echo date("Y"); ?> All Rights Reserved. Logo and Website by <a href="https://adenacreative.com" target="_blank">Adena Creative</a></p>
         </div>
     </div>
 </div>
