--- a/map.htm
+++ b/map.htm
@@ -60,9 +60,8 @@
                 <li><a href="https://www.facebook.com/mcmidgard" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
                 <li><a href="https://twitter.com/intent/follow?&screen_name=midgardmc" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
                 <li><a href="https://www.reddit.com/r/MidgardMC/" target="_blank"><i class="fab fa-reddit-square"></i></a></li>
-                <li><a href="https://discord.gg/E2BN4Cz" target="_blank"><i class="fab fa-discord"></i></a></li>
             </ul>
-            <p>Copyright &copy;<?php echo date("Y"); ?> All Rights Reserved. Logo and Website by <a href="https://adenamarketing.com" target="_blank">Adena Marketing</a></p>
+            <p>Copyright &copy;<?php echo date("Y"); ?> All Rights Reserved. Logo and Website by <a href="https://adenacreative.com" target="_blank">Adena Creative</a></p>
         </div>
     </div>
 </div>
