--- a/newmap.htm
+++ b/newmap.htm
@@ -52,7 +52,7 @@
 <div class="container-fluid page-title text-center">
     <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12">
-            <h1>About Midgard</h1>
+            <h1>Update Aquatic Information</h1>
         </div>
     </div>
 </div>
@@ -61,69 +61,28 @@
     <div class="row">
         <div class="col-md-8 col-sm-12 col-xs-12">
 
-            <h2>Minecraft for the Experienced</h2>
+            <h2>To our members</h2>
             <hr />
-            <p>Midgard is a Minecraft server for veteran players. Our community focuses on an enhanced Vanilla gameplay experience, while keeping to the aspects of the game that make Survival Multiplayer great.</p>
 
-            <p>We are not a server that is run out of a kids bedroom or paid for with a parent's credit card &mdash; we <em>own</em> our server, and the senior staff is made up of IT professionals.</p>
+            <p>Minecraft Update Aquatic has been one of the most anticipated releases in the game's history. To that end, we've been working dilligently to ensure a smooth transition from our old map, to our new permanent home.</p>
 
             <br />
 
-
-            <h2>We've Been Around</h2>
-            <hr />
-            <p>Midgard is over 6 years old. The last time we had a map reset was 3 years ago. We only do map resets when Mojang releases updates that require that we do so. If you're tired of constantly worrying about impending resets, then we're the server for you.</p>
-
-            <br />
-
-            <h2>Server Features</h2>
-            <hr />
-            <p>In our 6+ years of uptime, we've been constantly striving for and searching out what works for the community, and as a result, we've developed a pretty good set of features that our players enjoy:</p>
-
-            <!--<ul>
-                <li>/home commands with up to two homes plus a bed spawn</li>
-                <li>/spawn command so you can easily and quickly get to Spawn!</li>
-                <li>Resource world, Nether, and End so your supply never runs out!</li>
-            </ul>-->
-
-            <div class="list-group">
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Home commands</h4>
-                    <p class="list-group-item-text">/home command with up to two homes plus a bed spawn, so you can always find your way home.</p>
-                </div>
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Spawn command</h4>
-                    <p class="list-group-item-text">/spawn command to easily and quickly get to Spawn!</p>
-                </div>
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Resource Worlds</h4>
-                    <p class="list-group-item-text">Resource world, Nether, and End so your supply never runs out!</p>
-                </div>
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Don't lose hope!</h4>
-                    <p class="list-group-item-text"><code>KeepInv</code> is on, so you won't lose your stuff in the event of an unforeseen accident.</p>
-                </div>
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Level up quickly</h4>
-                    <p class="list-group-item-text">We have a variety of XP farms to level up quickly and grab some loot!</p>
-                </div>
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Buy, sell, trade</h4>
-                    <p class="list-group-item-text">With some starter cash, you can open your own shop, buy from others, trade, or do your own thing. It's up to you!</p>
-                </div>
-                <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Live anywhere</h4>
-                    <p class="list-group-item-text">Like living close by? Or at the ends of the earth? Our map is 20k blocks, so there's plenty of room!</p>
-                </div>
-            </div>
-
-            <p>We also have a variety of community events, such as our New Years Celebration (see our gallery) that keeps people active and involved, with more to come.</p>
+            <h3>Some things of note:</h3>
+            <ul>
+                <li>As of 10/23/2018, we are currently laying the groundwork for the launch of the new map, which includes building out a suitable spawn area and cardinal roads so players can start exploring.</li>
+                <li>We are currently working on planning out how chests and builds from the 1.12 map will be transferred over. Please be patient with us as we work through these issues.</li>
+            </ul>
 
             <br />
 
-            <h2>Come Join Us</h2>
-            <hr />
-            <p>Want to see what Midgard has to offer? Join our server, take a look around, and <a href="https://goo.gl/forms/CBCx3wDhFkyHfpPf1" target="_blank">apply to be whitelisted</a> and <a href="https://discord.gg/E2BN4Cz" target="_blank">join in the discussion on Discord!</a> We're a friendly community of seasoned players from all walks of life.</p>
+            <p>We've made great strides in getting spawn set up and the roads built, so it won't be too much longer. Stay tuned to this website and our Discord server for the latest updates.</p>
+
+            <p>We thank you for your patience.</p>
+
+            <br>
+
+            <p>&mdash; Midgard Staff</p>
 
         </div>
 
