--- a/index.htm
+++ b/index.htm
@@ -103,8 +103,8 @@
 <div class="container-fluid about a-3">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12">
-        <h2>Update Aquatic Map Coming Soon!</h2>
-        <p>We are currently laying the groundwork for the launch of our new 1.13.x compatible map. This will be our new permanent home. Stay tuned for more information!</p>
+        <h2>Come Play Update Aquatic With Us!</h2>
+        <p>We are currently back open and upgraded to 1.13 Update Aquatic. Come join us!</p>
         <p><a class="btn btn-success btn-md" href="newmap.htm" role="button">More Info</a></p>
       </div>
     </div>
