Update newmap.htm with 1.13
Update newmap.htm with 1.13 info

--- a/newmap.htm
+++ b/newmap.htm
@@ -70,7 +70,8 @@
 
             <h3>Some things of note:</h3>
             <ul>
-                <li>As of 10/23/2018, we are currently laying the groundwork for the launch of the new map, which includes building out a suitable spawn area and cardinal roads so players can start exploring.</li>
+                <li>As of 10/28/2018 we are now open and upgraded to 1.13!</li>
+                <li><s>As of 10/23/2018, we are currently laying the groundwork for the launch of the new map, which includes building out a suitable spawn area and cardinal roads so players can start exploring.</s></li>
                 <li>We are currently working on planning out how chests and builds from the 1.12 map will be transferred over. Please be patient with us as we work through these issues.</li>
             </ul>
 
